# rede-social

./: .gitignore  TODO.md  dev.py  dev.sh  pyproject.toml
src/api/: application.py  authentication.py  configuration.py
src/api/dtos/: posts.py  users.py
src/api/exceptions/: user.py
src/api/routes/: home.py  post.py  users.py
src/datalayer/models/: base.py  post.py  user.py
src/services/: post.py  user.py
